Edits from 2021-02-25 meeting

--- a/references.bib
+++ b/references.bib
@@ -826,6 +826,54 @@
 	pages = {e1002023}
 }
 
+@article{lande_measurement_1983,
+	title = {The {Measurement} of {Selection} on {Correlated} {Characters}},
+	volume = {37},
+	issn = {00143820},
+	url = {https://www.jstor.org/stable/2408842?origin=crossref},
+	doi = {10.2307/2408842},
+	number = {6},
+	urldate = {2021-02-24},
+	journal = {Evolution},
+	author = {Lande, Russell and Arnold, Stevan J.},
+	month = nov,
+	year = {1983},
+	pages = {1210},
+	file = {Lande_Arnold_1983_The_Measurement_of_Selection_on_Correlated_Characters.pdf:/Users/amlalejini/Dropbox/Library/research-bibliography/Lande_Arnold_1983_The_Measurement_of_Selection_on_Correlated_Characters.pdf:application/pdf}
+}
+
+
+@book{zimmer_evolution_2013,
+	address = {Greenwood Village, CO},
+	title = {Evolution: making sense of life},
+	isbn = {978-1-936221-17-2 978-1-936221-36-3},
+	shorttitle = {Evolution},
+	publisher = {Roberts and Company Publishers},
+	author = {Zimmer, Carl and Emlen, Douglas John},
+	year = {2013},
+	keywords = {Evolution (Biology), SCIENCE / Life Sciences / Evolution}
+}
+
+@article{beaumont_experimental_2009,
+	title = {Experimental evolution of bet hedging},
+	volume = {462},
+	issn = {0028-0836, 1476-4687},
+	url = {http://www.nature.com/articles/nature08504},
+	doi = {10.1038/nature08504},
+	language = {english},
+	number = {7269},
+	urldate = {2021-02-24},
+	journal = {Nature},
+	author = {Beaumont, Hubertus J. E. and Gallie, Jenna and Kost, Christian and Ferguson, Gayle C. and Rainey, Paul B.},
+	month = nov,
+	year = {2009},
+	pages = {90--93},
+	file = {Beaumont_et_al_2009_Experimental_evolution_of_bet_hedging.pdf:/Users/amlalejini/Dropbox/Library/research-bibliography/Beaumont_et_al_2009_Experimental_evolution_of_bet_hedging2.pdf:application/pdf}
+}
+
+
+
+
 
 
 
