--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -16,7 +16,8 @@ Here, we use digital organisms (self-replicating computer programs) to investiga
 Specifically, we 
 (1) examined the evolutionary histories of plastic and non-plastic populations to test whether the evolution of adaptive plasticity promotes or constrains subsequent evolutionary change;
 (2) evaluated if adaptive plasticity improves fitness landscape exploration and exploitation by testing whether plastic populations are better able to evolve and then maintain novel traits;
-and (3) compared the prevalence of deleterious hitchhiking in plastic and non-plastic populations to test if the evolution of adaptive plasticity increases the potential for deleterious cryptic variation to accumulate.
+% [prevalence of deleterious hitchhiking]
+and (3) compared the [accumulation of deleterious genes] in plastic and non-plastic populations to test if the evolution of adaptive plasticity increases the potential for deleterious cryptic variation to accumulate.
 We find that populations with adaptive phenotypic plasticity evolve more slowly than non-plastic populations, which rely on genetic variation from \textit{de novo} mutations to continuously re-adapt to the environment.
 The non-plastic populations undergo more frequent selective sweeps, accumulate many more genetic changes, [finish listing big results]. 
 We find that phenotypic plasticity stabilizes populations against environmental fluctuations; whereas the repeated selective sweeps in non-plastic populations drive the loss of beneficial traits via deleterious hitchhiking.  
