--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -1,3 +1,5 @@
 % This is a short text to acknowledge the contributions of specific colleagues, institutions, or agencies that aided the efforts of the authors.
 
 \section*{Acknowledgments}
+
+% Preliminary experiments from which this work sprouted, ALife 2020 keynote
