--- a/tex/results.tex
+++ b/tex/results.tex
@@ -49,6 +49,15 @@
 %   - mean: 0.4827586 CI [0.4046,  0.5598]
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+[
+% [We are specifically interested in contrasting the evolutionary effects of adaptive plasticity relative to non-plastic populations evolving in identical fluctuating environments.]
+% [Environmental change has been shown to drive evolutionary change and promote evolutionary exploration in non-plastic populations as compared to populations evolving in an unchanging environment \citep{zaman_coevolution_2014,nahum_improved_2017}.]
+% [If so, does adaptive plasticity negate the [effects of environmental change on evolutionary exploration]? 
+% Does adaptive plasticity constrain evolutionary change as predicted by conventional evolutionary theory, and if so, does adaptive plasticity negate the [effects of environmental change on evolutionary exploration]? 
+%promoted or constrained subsequent genomic and phenotypic change.
+% [If so, does adaptive plasticity negate the [effects of environmental change on evolutionary exploration]? 
+]
+
 % -- Magnitude of evolutionary change --
 %  - Selective sweeps
 %  - Mutation accumulation
@@ -159,9 +168,7 @@ In contrast, across all PLASTIC and STATIC dominant lineages, we observed that a
 % [Limitation (relative value): in supplemental experiments, relative value of fluctuating and novel tasks affects novel task retention, the stronger directional selection on fluctuation tasks relative to selection on novel tasks makes novel tasks harder to maintain because less deleterious to lose novel trait].
 
 \vspace{0.5cm}
-\subsection{Deleterious hitchhiking}
-
-% --@Charles editing bookmark--
+\subsection{Deleterious gene accumulation}
 
 %%%%%%
 % 2021-02-05 - Results
@@ -192,9 +199,6 @@ Figure [x] shows the [prevalence of poison instructions in final dominant genoty
 We found that NON-PLASTIC lineages had significantly more organisms that executed the \code{poison} instruction more often than their parent as compared to PLASTIC or STATIC lineages [stats]; we found no significant difference in \code{poison} execution along dominant lineages between PLASTIC and STATIC lineages.
 %These numbers remain significant when normalized by number of generations ([stats]).
 These significance patterns do not qualitatively change when normalized by number of generations ([stats]).
-
-% - increases per offspring -
-% We also found that the per-generation number of \code{poison} execution increases along the lineage was significantly higher in NON-PLASTIC lineages than in PLASTIC or STATIC lineages [stats], and we found no significant difference between PLASTIC and STATIC lineages.
 
 % -- When/where does hitchhiking take place? --
 Next, we examined the frequency that mutations that increase \code{poison} execution co-occur with mutations that change the base task profile of offspring along dominant lineages across treatments.
