--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -1,6 +1,19 @@
 % GUIDELINES:
 % This section may be divided by subheadings. Discussions should cover the key findings of the study: discuss any prior research related to the subject to place the novelty of the discovery in the appropriate context, discuss the potential shortcomings and limitations on their interpretations, discuss their integration into the current understanding of the problem and how this advances the current views, speculate on the future direction of the research, and freely postulate theories that could be tested in the future.
 
+%%%%%%%%%%%
+% Would be nice to have empirical studies/relevant examples about:
+% --- Evolutionary change ----
+% - how repeated bouts of directional selection affect evolutionary change (mutation accumulation/phenotypic volatility/sweeps)
+% - Adaptive plasticity can stabilize populations against fluctuations
+% - Relaxed selection in plastic genes (or difficulty in maintaining costly plasticity)
+% --- Novel traits ----
+% - changing environments + fitness landscape exploration
+% - plasticity stabilizes populations => allows further adaptation
+% --- Deleterious genes ----
+%%%%%%%%%%%
+
+% @AML: This section is missing good empirical examples. Currently relies too heavily on digital evolution studies.
 \section{Discussion}
 
 Our results indicate that adaptive plasticity can improve evolution's ability to maintain and refine novel traits, though with the tradeoff of reducing evolutionary exploration of the fitness landscape.
@@ -12,7 +25,9 @@ Below we discuss the specific implications of the results from each of our three
 % -- Overview of main evolutionary change results --
 Adaptively plastic populations experienced fewer selective sweeps and fewer total genetic changes relative to non-plastic populations evolving in the same environmental conditions.
 Plastic populations adapted to environmental changes by relying on environmentally-induced cues and within-lifetime regulation, which also stabilized these populations against fluctuations. 
-In contrast, non-plastic populations required genetic modifications to respond to external changes and thus exhibited frequent selective sweeps during each new readaptation.
+% @AML: added something about 
+Because ENV-A and ENV-B were incompatible (i.e., adaptive phenotypes in ENV-A were maladaptive in ENV-B and vice versa), non-plastic generalists did not evolve; any non-plastic generalist (e.g., that performed all tasks or performed no tasks) would have been quickly outcompeted by a specialist strategy because of the large fitness benefit for performing environment-specific tasks.
+As such, non-plastic populations required genetic modifications to respond to external changes and thus exhibited frequent selective sweeps during each new readaptation.
 Indeed, across all three of our experiments, the evolutionary dynamics of plastic populations were more similar to that of populations evolving in a static environment than to that of non-plastic populations evolving in the same fluctuating environment.
 
 % -- [Architecture results] --
@@ -29,15 +44,19 @@ Consistent with our experimental results, \cite{canino-koning_evolution_2016} al
 
 % -- In context of conventional evolutionary theory: evo response => f(selection, variation) --
 Our results are also consistent with conventional evolutionary theory.
-A trait's evolutionary response to selection depends on the strength of directional selection and on the amount of genetic variation for selection to act on [citations; Gilbert et al 2019].
+A trait's evolutionary response to selection depends on the strength of directional selection and on the amount of genetic variation for selection to act on \citep{lande_measurement_1983,zimmer_evolution_2013}.
 In our experiments, non-plastic populations repeatedly experienced strong directional selection to toggle which tasks were expressed after each environmental change.
 As such, retrospective analyses of successful lineages revealed rapid evolutionary responses (that is, high rates of genetic and phenotypic changes).
-[relevant examples of these dynamics from literature].
+% WOULD BE NICE: [relevant examples of these dynamics from literature].
+% - Rapid evolutionary change (strong directional selection) => rapid genetic and phenotypic responses.
+% Indeed, many empirical studies demonstrating rapid evolutionary responses to directional selection [????].
 
 % Adaptive plasticity provided a mechanism for organisms to regulate task expression in response to environmental changes.
 %The rates of genetic and phenotypic change as well as the frequency of selective sweeps that we observed in adaptively plastic populations resembled that of populations evolving in a static environment.
 Adaptive plasticity shielded populations from strong directional selection when the environment changed, eliminating the need for a rapid evolutionary response to toggle task expression. 
-[relevant examples of these dynamics from other work].
+After each environmental change, any accumulated cryptic variation in plastic genotypes would have been exposed to selection, potentially resulting in a rapid an evolutionary response \citep{wund_assessing_2012}.
+However, we did not find compelling evidence for this in our experiments, as the evolutionary dynamics of plastic populations were generally comparable to populations evolving in static environments.
+% [relevant examples of these dynamics from other work].
 
 % -- Evidence for relaxed selection --
 We observed evidence of mutation accumulation in plastic lineages that resulted in the loss of unexpressed traits that would have been important for survival in the alternate environment.
@@ -45,13 +64,7 @@ These mutations would have proven detrimental when the environment changed.
 However, because our analyses focused retrospectively on successful lineages, nearly all of these mutations were followed by a compensatory mutation that restored the lost trait before the environment changed and it needed to be expressed.
 Environmental fluctuations in our experiments were tuned to be frequent enough that genes needed to function appropriately in the off environment (whether those genes were unexpressed or associated with task regulation) were not lost from the population due to relaxed selection [See supplemental ???].
 Additionally, we imposed no explicit costs on phenotypic plasticity, which minimized selection against the maintenance of plastic genes during the periods between environmental changes.  
-[relevant examples of these dynamics/predictions about how results change if plasticity is costly?].
-
-% Our data do not necessarily provide evidence for or against the genes as followers or plastic rescue hypotheses, as these hypotheses focus on contexts where plastic populations experience novel or abnormally stressful environmental change.
-
-% Non-adaptive plasticity can increase a population's extinction risk, especially if a [misaligned] plastic trait is strongly tied to survival [citations].
-% If the population persists, however, the population should experience strong directional selection against maladaptive responses to environmental cues, resulting in rapid evolutionary change [citations].
-% streamline next sentence
+% [relevant examples of these dynamics/predictions about how results change if plasticity is costly?].
 
 \vspace{0.25cm}
 \subsection{Adaptively plastic populations retain more novel traits than non-plastic populations in fluctuation environments}
@@ -67,17 +80,20 @@ That is, non-plastic populations discovered more novel tasks than adaptively pla
 Despite lower overall task discovery, we found that adaptively plastic populations better exploited the fitness landscape than non-plastic populations.
 That is, adaptively plastic populations retained more novel tasks than non-plastic populations evolving under identical environmental conditions.
 % Frequent selective sweeps in non-plastic populations driven by repeated  bouts of strong directional selection after each environmental change inhibited the maintenance of novel tasks in non-plastic populations.
-Evolution in non-plastic populations was dominated by repeated bouts of strong directional selection after each environmental change. 
+Evolution in non-plastic populations was dominated by repeated bouts of strong directional selection [on base task expression] after each environmental change. 
 In our experiment, novel tasks were less important to survival than fluctuating tasks.
-[As such, in non-plastic populations, if the loss of a novel trait (via mutation) co-occurred with a mutation that improved fitness after the environment changes, then the loss of the novel trait can hitchhike to fixation.] %loss of the novel trait is because of the relative values of base and novel tasks.]
+[As such, in non-plastic populations, if the loss of a novel trait (via mutation) co-occurred with a mutation that improved fitness after the environment changes, then the loss of the novel trait was likely to hitchhike to fixation.] 
+%loss of the novel trait is because of the relative values of base and novel tasks.]
 Indeed, we found that mutations associated with the loss of a novel task along successful lineages form non-plastic populations overwhelmingly co-occurred with mutations that helped offspring adapt to environmental changes.
 
+
 % @AML: editing bookmark
-Consistent with our findings, \cite{canino-koning_fluctuating_2019} found that non-plastic populations of digital organisms evolving in a harsh cyclic environment maintained fewer novel traits than populations evolving in [static environments or cyclic environments without punishments].
-%  - Nahum - changing environments
-[\cite{nahum_improved_2017} evaluated how a temporary environmental change influences fitness landscape exploration, finding that (non-plastic) populations that experienced environmental change during evolution better explored genotype space and achieved better overall fitness relative to populations that never experienced an environmental change.]
-%  - Zaman - complex traits
-[Host-parasite coevolutionary dynamics is another form of changing environment. \cite{zaman_coevolution_2014} observed that ...]
+\cite{nahum_improved_2017} found that a single temporary environmental change can improve fitness landscape exploration and exploitation in evolving populations of non-plastic digital organisms.
+In our system, however, we found that \textit{repeated} fluctuations reduced the ability of non-plastic populations to maintain and exploit tasks; though, we did find that repeated fluctuations may improve task discovery. 
+% @AML: I'm not sure this fits - [In a very different context, \cite{zaman_coevolution_2014} found that the constantly changing environment that results from host-parasite coevolution resulted in improved fitness landscape exploration in the (non-plastic) host population (i.e., the evolution of more complex traits).] 
+Consistent with our findings, \cite{canino-koning_fluctuating_2019} found that non-plastic populations of digital organisms evolving in a harsh cyclic environment maintained fewer novel traits than populations evolving in [static environments or cyclic environments without punishments] [despite comparable discovery(?)].
+% [relevant literature on changing environments + fitness landscape exploration].
+% - [Kashtan et al 2007] - temporally varying goals speed up evolutionary adaptation
 
 % - Plastic rescue, stabilizing effect of plasticity -
 Our results suggest that adaptive phenotypic plasticity can improve the potential for populations exploit novel resources by stabilizing populations against stressful environmental changes.
@@ -85,47 +101,82 @@ Our results suggest that adaptive phenotypic plasticity can improve the potentia
 Our results lend some support to the hypothesis that phenotypic plasticity can rescue populations from extinction under changing environmental conditions by promoting stability and persistence [cite].
 While our experiments do not explore the likelihood of extinction, we did observe that the stabilizing effect of adaptive phenotypic plasticity allowed populations to more effectively exploit novel resources.
 % We hypothesize that a similar study investigating extinction risk rather than novel resource exploitation would 
-[relevant examples from literature?]
+% [relevant examples from literature?]
 % - Evolutionary computation?
 % - Wet lab systems?
 % - Theoretical models?
 
-[relevance to genes as followers hypothesis].
-Our data do not necessarily provide evidence for or against the genes as followers or plastic rescue hypotheses, as these hypotheses focus on contexts where plastic populations experience novel or abnormally stressful environmental change.
-[most scenarios hypothesized where plasticity promotes adaptive evolution, change in environment changes phenotypic expression, exposing unexpressed variation; however, this was not the case for this experiment. Novel environmental conditions did not change sensory input].
+% [relevance to genes as followers hypothesis].
+Our data do not necessarily provide evidence for or against the genes as followers hypothesis.
+The genes as followers hypothesis focuses on contexts where plastic populations experience novel or abnormally stressful environmental change.
+However, in our system, environmental changes were cyclic, and the magnitude of changes were consistent for the entirety of the experiment.
+During the experimental phase of the experiment, no offspring experienced an environment that was not experienced by its ancestors.
+Further, the introduction of novel tasks during the second experimental phase did not change the meaning of environmental cues; that is, the novel environmental conditions (i.e., the introduction of novel tasks) did not change the background fluctuating environment.
+% [most scenarios hypothesized where plasticity promotes adaptive evolution, change in environment changes phenotypic expression, exposing unexpressed variation; however, this was not the case for this experiment. Novel environmental conditions did not change sensory input].
 % Less evolutionary change + lower task discovery
 
 \vspace{0.25cm}
-\subsection{Non-plastic populations experience more genetic hitchhiking than adaptively plastic populations in fluctuating environments}
+\subsection{Non-plastic populations experience more deleterious gene accumulation than adaptively plastic populations in fluctuating environments}
+
+% did not find evidence that PLASTIC any different than STATIC => adaptive plasticity in our system did not contribute to accumulation of deleterious mutations via cryptic variation
+
+% -- Overview of results --
+%   - More accumulation in non-plastic
+%   - no evidence for cryptic variation housing poison
+%   - plastic ~~ static
+In our third experiment, we evaluated if adaptive plasticity influences the accumulation of explicitly deleterious genes (\code{poison} instructions) in genomes evolving in our system.
+We found that non-plastic lineages evolved in a fluctuating environment had both larger magnitudes and higher rates of \code{poison} accumulation than that of adaptively plastic lineages.
+We did not find evidence that \code{poison} instructions accumulated as cryptic variation in plastic lineages.
+Indeed, the lineages of adaptively plastic genotypes did not different significantly from the lineages of genotypes evolved in static conditions.
+
+% -- Elaboration on non-plastic result --
+% - accumulation in non-plastic treatment driven by genetic hitchhiking
+We hypothesize that the elevated rates of \code{poison} instruction accumulation along non-plastic lineages evolved in changing environments is primarily driven by deleterious genetic hitchhiking.
+In asexual populations without horizontal gene transfer, all mutations are linked.
+As such, deleterious mutations that co-occur with a beneficial mutation (i.e., a driver) can sometimes `hitchhike' to fixation \citep{smith_hitch-hiking_1974,van_den_bergh_experimental_2018,buskirk_hitchhiking_2017}.
+Natural selection normally prevents deleterious mutations from reaching high frequencies, [as carriers are often outcompeted by individuals without the deleterious mutation]. 
+However, when a beneficial mutation sweeps to fixation in a clonal population, so too does any linked genetic material, including other beneficial, neutral, or deleterious mutations [(as long as negative fitness effect does not outweigh benefits of driver(s))] \cite{barton_genetic_2000, smith_hitch-hiking_1974}.
+
+Across our experiments, the rapid frequency of selective sweeps in non-plastic populations evolving in changing environments afforded more opportunities for genetic hitchhiking than that of populations evolving under other treatments. 
+Indeed, across our experiments, successful lineages from non-plastic populations in the cyclic environment exhibited higher mutation accumulation, novel trait loss, and \code{poison} instruction accumulation than their plastic counterparts.
+In aggregate along these lineages, we found that many ($\sim$49\%; XX / XX) mutations that increased \code{poison} instruction execution in offspring co-occurred with mutations that helped the offspring adapt to an environmental change.
+[Conservative report of hitchhiking because we are not looking at mutations along lineage that may have been linked in different generations].
+
+% -- Elaboration on plastic result --
+We found that adaptive phenotypic plasticity reduced \code{poison} instruction accumulation by buffering populations against repeated environmental fluctuations, which reduced opportunities for \code{poison} instructions to hitchhike to fixation.
+We did not find evidence of cryptic variation driving the accumulation of \code{poison} instructions in adaptively plastic lineages, as plastic lineages exhibited similar rates of accumulation to that of lineages evolved in a static environment.
+[Several possibilities for why we did not observe poison instruction accumulation in unexpressed genetic variation.]
+[Length of the period between switches; rapid enough such that any unexpressed poison instructions would be revealed to selection before time to reach high frequency in population].
+[Underlying mechanisms of plasticity that evolve in avida typically result in small regions of regulation; not actually a large number of unexpressed instructions. Conditional logic instructions toggle a single instruction. Large regions of regulation are possible, but they require more complicated genetic architecture, combining sensory instructions, conditional logic, and jump statements, and templating.]
+% [Here is where we would back this up with number of instructions that are toggled in plastic genotypes]
+% [Because adaptively plastic populations already well-adapted, not many large effect mutations available to drive hitchhiking].
+
+Under some circumstances, phenotypic plasticity can serve as cache of hidden genetic variation that, when revealed to selection, will result in a rapid evolutionary response (e.g., genetic accommodation if the variation is adaptive).
+[However, our results... For rapid cycling environments where the magnitude of changes are consistent, our results indicate that we should not necessarily assume accumulation of cryptic variation in plastic responses.]
+
+% several contributing factors: length of period between switches, genetic machinery for plasticity in Avida => small scale regulation, looked retrospectively at successful lineages; if accumulation did not reach high frequencies, quickly outcompeted
+% we suspect this is due to the nature of regulation in our system.
+% way that regulation is implemented by genomes =>  
+% functionality is not modular often very integrated
+% that is, not much physical space on the genome being regulated
+% [Buffering effect: Rate of selective sweeps; plastic populations had sweeps slower than changes, which allowed unexpressed variation to be selected against before having a chance to sweep population]
+
 
 % When do we expect to see hitchhiking?
-In our first two experiments, we found that non-plastic populations of digital organisms accumulated more mutations and more frequently lost newly acquired adaptive traits than plastic populations in our experimental system.
-These two results motivated us to directly evaluate the propensity for deleterious hitchhiking in plastic and non-plastic populations evolving in a fluctuating environment. 
+% In our first two experiments, we found that non-plastic populations of digital organisms accumulated more mutations and more frequently lost newly acquired adaptive traits than plastic populations in our experimental system.
+% These two results motivated us to directly evaluate the propensity for deleterious hitchhiking in plastic and non-plastic populations evolving in a fluctuating environment. 
 %[Genetic hitchhiking is X].
-As a beneficial mutation increases in frequency in the population, so does all genetic material linked to it via the process of genetic hitchhiking \cite{barton_genetic_2000, smith_hitch-hiking_1974}.
-The effects of genetic hitchhiking are more drastic in  the absence of recombination or horizontal gene transfer, as a beneficial mutation may drag the entire genome it arose in to [frequency/fixation] \cite{smith_evolution_1990}.
-[Conditions where genetic hitchhiking is expected].
 % [Barton 2000]
 % - if polymorphishisms fluctuate in frequency, then fluctuating selection could be the main cause of hitchhiking 
 % [Maynard Smith 1990]
-[Reasons why unclear what treatment might have increased rates of hitchhiking. Plastic populations could accumulate unexpressed hitchhiking instructions, non-plastic populations have more frequent selective sweeps, providing more opportunities for hitchhiking].
+% [Reasons why unclear what treatment might have increased rates of hitchhiking. Plastic populations could accumulate unexpressed hitchhiking instructions, non-plastic populations have more frequent selective sweeps, providing more opportunities for hitchhiking].
 
-We found that adaptive phenotypic plasticity can reduce a population's susceptibility to deleterious genetic hitchhiking by buffering the population against repeated environmental fluctuations.
-[Power of digital evolution: unique because instruction is explicitly deleterious and is selected against, so incorporation into successful lineages is due to hitchhiking].
-[Indeed, we observed that mutations in non-plastic lineages evolved in fluctuating environment that caused increase in execution of deleterious instructions co-occured with mutations that also changed base tasks].
+% We found that adaptive phenotypic plasticity can reduce a population's susceptibility to deleterious genetic hitchhiking by buffering the population against repeated environmental fluctuations.
+% [Power of digital evolution: unique because instruction is explicitly deleterious and is selected against, so incorporation into successful lineages is due to hitchhiking].
+% [Indeed, we observed that mutations in non-plastic lineages evolved in fluctuating environment that caused increase in execution of deleterious instructions co-occured with mutations that also changed base tasks].
 % TODO - can we pull deleterious changes vs. beneficial changes post-hoc?
-[The strength of selection against deleterious traits mattered. Weaker selection, more hitchhiking; stronger selection, less hitchhiking.]
-[Rate of selective sweeps; plastic populations had sweeps slower than changes, which allowed unexpressed variation to be selected against before having a chance to sweep population].
-
-% - limitations of this study (and maybe incorporate future work) -
-% [Limitation: asexual populations; future work could incorporate horizontal gene transfer e.g., rose hgt work to see if it reduces propensity for hitchhiking].
-
-% Our deleterious hitchhiking results were sensitive to the penalty associated with the poison instruction [supplement section x].
-% Lower penalties, weaker selection against poison instruction, resulted in more prevalent hitchhiking.
-% Higher penalties, stronger purifying selection against executing poison instructions, resulted in less hitchhiking.
-
-% These results suggest that non-plastic populations evolving in a fluctuating environment are more susceptible to genetic hitchhiking than plastic populations evolving in the same fluctuating environment.
-% The large number of rapid selective sweeps in non-plastic populations afford many more opportunities for genetic hitchhiking. 
+% [The strength of selection against deleterious traits mattered. Weaker selection, more hitchhiking; stronger selection, less hitchhiking.]
+% [Rate of selective sweeps; plastic populations had sweeps slower than changes, which allowed unexpressed variation to be selected against before having a chance to sweep population].
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -145,6 +196,11 @@ We found that adaptive phenotypic plasticity can reduce a population's susceptib
 % - Type of plasticity -
 Our conclusions are limited to \textit{adaptively} plastic populations; we did not explore the affects of non-adaptive plasticity in which environmental cues shift a trait further away from the phenotypic optimum.
 Further, environmental cues in our experiments were reliable, and environmental changes were consistent over time; that is, sensory instructions perfectly differentiated between ENV-A and ENV-B, and environmental fluctuations never exposed populations to entirely new conditions.
+% While predictable cyclic change is ubiquitous (e.g., day-night cycles, seasonal cycles, etc.), other axes of environmental change commonly [co-occur/layer on top]. 
+We know that both the reliability of cues and the timescales of environment switching influences evolutionary outcomes [citations - Origins of plasticity, Li and Wilke, theoretical modeling work, experimental evolution?...]].
+For example, [Boyer et al.] evolved populations of \textit{Saccharomyces cerevisiae} in an environment that fluctuated between two growth conditions, observing that both the predictability and environmental switch rate influenced the rate of evolutionary response as well as adaptive outcomes at the genotypic and phenotypic levels. % e.g., generalist (rapid switching) vs. specialist (long periods in each env)
+% In plastic populations, switching rate determines maintenance of plastic genes
+Future work should [explore the effects of adaptive plasticity on different numbers of environments, switch rates, and orderings (both stochastic and deterministic)...]
 
 % - Machinery -
 [Limitation: affected by specific genetic machinery e.g., way that regulation/plasticity works in system influences how much unexpressed variation can build up, influencing hitchhiking].
@@ -158,19 +214,22 @@ Further, environmental cues in our experiments were reliable, and environmental 
 [work in mention to Rose's HGT results].
 [see if hgt reduces effect of trait loss in non-plastic populations]
 
+% - focus on lineages -
+[Focus on successful lineages].
+[No co-existence, recent coalescence events - Represents evolutionary history of majority of final population].
+[Gives us a view of what fixed, what worked].
+[Would be worth exploring full phylogeny].
+[Complete phylogeny, including extinct clades, would allow us to see the variance in our findings]
+[e.g., distinguish between plastic and static populations => plastic have more accumulation of cryptic variation?]
+[might be missing that by focusing on successful lineages].
 
-% [aim to establish/explore baseline expectations for population dynamics in simple cyclic environment.(?)]
-% [Future work/next steps: explore more complex changes to environment; changes affect sensors; start testing plasticity-first adaptation, ...].
+% - most broad => use digital evolution! -
+% bridge gap between natural experimental systems (in lab and in field) and mathematical modeling
+[digital evolution to test hypotheses about consequences of phenotypic plasticity].
+[just like in bio, many different model organisms => different mechanisms of regulation/plasticity].
+[we can not only control plasticity (as we did here), but we can also explore different mechanisms of plasticity, controlling regions of regulated space, fidelity of regulation, complexity of mechanisms, ... testing generality of these dynamics across mechanisms]
 
-% demonstrate how we can use digital evolution to test hypotheses about phenotypic plasticity => bridge gap between natural experimental systems (in lab and in field) and mathematical modeling
 
-% Future work continue to use digital evolution to test hypotheses about how phenotypic plasticity affects evolutionary change. 
-% Sensory reliability.
-% Different types of environmental change (more complex environments).
-% Different rates of change; in our experiments, the environment changed frequently enough such that plastic machinery/traits adaptive to non-current environment did not degrade due to relaxed selection.
-
-% Of course, real world environmental conditions are not so [simple/one-dimensional].
-% While predictable cyclic change is ubiquitous (e.g., day-night cycles, seasonal cycles, etc.), other axes of environmental change commonly [co-occur/layer on top]. 
 
 %%%%%%%%%%%%%% 
 % From Levis and Pfennig:
