--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -11,7 +11,7 @@
 Fluctuating environmental conditions are ubiquitous in natural systems. 
 Organisms have evolved a wide range of evolved strategies for coping with environmental change, such as 
 phenotypic plasticity \citep{ghalambor_adaptive_2007}, 
-bet hedging \citep{simons_modes_2011}, 
+bet hedging \citep{beaumont_experimental_2009}, 
 periodic migration \citep{winger_long_2019}, 
 and adaptive tracking \citep{barrett_adaptation_2008}.
 The particular coping mechanisms that evolve in fluctuating environments shift the course of subsequent evolution [citations].
@@ -55,49 +55,68 @@ It remains unclear to what extent and under what circumstances this cryptic vari
 The ``genes as followers'' hypothesis (also known as the ``plasticity first'' hypothesis) predicts that phenotypic plasticity may facilitate adaptive evolutionary change by producing variants with enhanced fitness under stressful or novel conditions \citep{west-eberhard_developmental_2003,schwander_genes_2011,levis_evaluating_2016}. 
 Environmentally-induced trait changes can be refined through selection over time (i.e., genetic accommodation).
 Further, selection may drive plastic phenotypes to lose their environmental dependence over time in a process known as genetic assimilation \citep{west-eberhard_developmental_2005,pigliucci_phenotypic_2006,crispo_baldwin_2007,schlichting_phenotypic_2014,levis_evaluating_2016}. 
-In this way, enviromentally-induced phenotypic changes can precede an evolutionary response.
+In this way, environmentally-induced phenotypic changes can precede an evolutionary response.
 
 % -- Editing w/Charles bookmark --
 
 % -- Plastic rescue + wrap up on plasticity background? --
 Phenotypic plasticity may also `rescue' populations from extinction under changing environmental conditions by buffering populations against novel stressors.
 This buffer promotes stability and persistence and grants populations time to further adapt to rapidly changing environmental conditions \citep{west-eberhard_developmental_2003,chevin_when_2010}. %[citations - Snell-Rood et al. 2018?].
-Disparate predictions about how phenotypic plasticity may shift the course of subsequent evolution are not mutually exclusive.
-Genetic and environmental [circumstances/context] will determine if and to what extent phenotypic plasticity promotes or constrains subsequent evolution.
+Disparate predictions about how phenotypic plasticity may shift the course of subsequent evolution are not necessarily mutually exclusive.
+Genetic and environmental contexts determine if and to what extent phenotypic plasticity promotes or constrains subsequent evolution.
 
 % West-eberhard on genetic accommodation: (1) a mutation or environmental change triggers the expression of a novel, heritable phenotypic variant, (2) the initially rare variant phenotype starts to spread (in the case of an environmentally induced change, due to the consistent recurrence of the environmental factor), creating a subpopulation expressing the novel trait, and (3) selection on existing genetic variation for the regulation or form of the trait causes it to become (a) genetically fixed or to remain (b) phenotypically plastic
 
 %%%%%%%%%%%%%%%%%%%%%%
 % -- Digital evolution --
 %%%%%%%%%%%%%%%%%%%%%%
-Experimental studies investigating the relationship between phenotypic plasticity and evolutionary outcomes can be challenging to conduct in natural systems: 
-the long time scales for substantial evolution can be intractable (though not necessarily impossible [cite LTEE]) and fine-grained experimental manipulations of plasticity are impractical.
-Digital evolution experiments have emerged as a powerful research framework from which evolution can be studied.
-In digital evolution, self-replicating computer programs (digital organisms) compete for resources, mutate, and evolve following Darwinian dynamics \textit{in silico}  \citep{mckinley_harnessing_2008}.
+%Experimental studies investigating the relationship between phenotypic plasticity and evolutionary outcomes can be challenging to conduct in natural systems due to the long time scales required for substantial evolution.
+% as well as the difficulty in experimentally manipulating the capacity for plasticity.
+Experimental studies investigating the relationship between phenotypic plasticity and evolutionary outcomes can be challenging to conduct in natural systems.
+Such experiments would require the ability to irreversibly toggle plasticity followed by long periods of evolution during which detailed phenotypic data would need to be collected.
+Digital evolution experiments have emerged as a powerful research framework from which evolution can be studied [CITE].
+In digital evolution, self-replicating computer programs (digital organisms) compete for resources, mutate, and evolve following Darwinian dynamics  \citep{mckinley_harnessing_2008}.
 Digital evolution studies balance the speed and transparency of mathematical and computational simulations with the open-ended realism of laboratory experiments.
-Modern computers allow us to observe many generations of digital evolution at tractable time scales (\textit{e.g.}, thousands of generations take mere minutes as opposed to months, years, or centuries).
+Modern computers allow us to observe many generations of digital evolution at tractable time scales; thousands of generations can take mere minutes as opposed to months, years, or centuries.
 Digital evolution systems also allow for perfect, non-invasive data tracking.
-Such transparency permits the tracking of complete evolutionary histories within an experiment, which circumvents the historical problem of drawing evolutionary inferences using incomplete fossil records and extant genetic sequences.
-Additionally, digital evolution systems allow for experimental manipulations and analyses that are beyond what is possible in laboratory systems, such as 
-systematic knockouts of loci to identify functionality \citep{lenski_evolutionary_2003},
-exhaustively characterizing local mutational landscapes \citep{lenski_genome_1999,canino-koning_fluctuating_2019},
-or disallowing neutral or deleterious mutations \citep{covert_experiments_2013}. 
-Digital evolution studies allow us to directly manipulate the capacity for plastic responses to evolve and perfectly observe subsequent dynamics, enabling us to experimentally test hypotheses that were previously relegated to theoretical analyses.
+Such transparency permits the tracking of complete evolutionary histories within an experiment, which circumvents the historical problem of drawing evolutionary inferences using incomplete records (from frozen samples or even fossils) and extant genetic sequences.
+Additionally, digital evolution systems allow for experimental manipulations and analyses that go beyond what is possible in wet-lab experiments.
+Such analyses have included exhaustive knockouts of every loci to identify the functionality of each \citep{lenski_evolutionary_2003},
+comprehensive characterization of local mutational landscapes \citep{lenski_genome_1999,canino-koning_fluctuating_2019},
+% or real-time analyses of mutational effects, potentially triggering interventions (e.g., reverting all deleterious mutations as they occur to isolate their long-term effects on evolutionary outcomes) \citep{covert_experiments_2013}. 
+and the real-time reversion of all deleterious mutations as they occur to isolate their long-term effects on evolutionary outcomes \citep{covert_experiments_2013}. 
+% Digital evolution studies allow us to directly manipulate the capacity for plastic responses to evolve and perfectly observe subsequent dynamics, enabling us to experimentally test hypotheses that were previously relegated to theoretical analyses.
+Digital evolution studies allow us to directly toggle the possibility for adaptive plastic responses to evolve, which enables us to empirically test hypotheses that were previously relegated to theoretical analyses.
 
 %%%%%%%%%%%%%%%%%%%%%%
 % -- Overview of what we're testing / doing --
 %%%%%%%%%%%%%%%%%%%%%%
 % For this work, we used a modified version of Avida that is freely available on GitHub [cite].
 
-In this work, we use the Avida Digital Evolution Platform (hereafter referred to as Avida) \citep{ofria_avida:_2009} to investigate how adaptive phenotypic plasticity affects subsequent evolutionary dynamics in a fluctuating environment.
+% @AML: I made a mess of this paragraph (2021-02-24), so it needs some workshopping. In short, I wanted to work in contrasting expectations for evolutionary exploration/exploitation from changing environments literature. 
+% - QUESTION: Should we shift from deleterious hitchhiking to just accumulation of alleles? Then leave the hitchhiking discussion to the results?
+In this work, we use the Avida Digital Evolution Platform \citep{ofria_avida:_2009}.
 Avida is an open-source system that has been used to conduct a wide range of well-regarded studies on evolutionary dynamics, including 
 the origins of complex features \citep{lenski_evolutionary_2003},
 the survival of the flattest effect \citep{wilke_evolution_2001},
 and the origins of reproductive division of labor \citep{goldsby_evolutionary_2014}.
-First, we examined the evolutionary histories of plastic and non-plastic populations to test whether the evolution of adaptive plasticity promoted or constrained subsequent genomic and phenotypic change.
-Next, we evaluated if adaptive plasticity improves fitness landscape exploration and exploitation by testing whether populations capable of adaptive plasticity are better able to evolve and retain novel adaptive traits. 
-Finally, we compared the [prevalence of deleterious hitchhiking/accumulation of deleterious genes] in plastic and non-plastic populations. 
-%to test if the evolution of adaptive plasticity increases the potential for deleterious cryptic variation to accumulate. 
+Here, we empirically investigate how adaptive phenotypic plasticity affects subsequent evolutionary dynamics in a fluctuating environment.
+Each experiment is divided into two phases: in phase one, we precondition sets of founder organisms with differing plastic or non-plastic adaptations;
+in phase two we examined the subsequent evolution of populations founded with organisms from phase one under specific environmental conditions [figure].
+% founded with organisms from phase one
+%Each experiment is divided into two phases: in phase one, we precondition populations under conditions where plasticity is favored, plasticity is disallowed, and where plasticity is not relevant (i.e., a static environment).
+First, we examine the evolutionary histories of phase two populations to test whether adaptive plasticity constrained subsequent genomic and phenotypic changes. 
+Next, we evaluate if adaptive plasticity constrains fitness landscape exploration and exploitation by identifying how well populations produced by each type of founder are able to evolve and retain novel adaptive traits.
+% @AML: TODO - we tested whether.... [hypothesis]
+[Finally we examine the frequency with which deleterious mutations occur along successful lineages in each type of population in order to understand how and why different types of plasticity allow or prevent].
+% Finally, we compare the [accumulation of explicitly deleterious genes] in plastic and non-plastic populations. 
+% @AML: why might we expect one way or another for accumulation of deleterious alleles?
+% Does hidden genetic variation increase accumulation of deleterious genes? 
+
+%%%%%
+% First, we examined the evolutionary histories of plastic and non-plastic populations to test whether the evolution of adaptive plasticity promoted or constrained subsequent genomic and phenotypic change.
+% Next, we evaluated if adaptive plasticity improves fitness landscape exploration and exploitation by testing whether populations capable of adaptive plasticity are better able to evolve and retain novel adaptive traits. 
+% Finally, we compared the [prevalence of deleterious hitchhiking/accumulation of deleterious genes] in plastic and non-plastic populations. 
 
 %%%%%%%%%%%%%%%%%%%%%%
 % - Overview of findings -
@@ -105,9 +124,9 @@ Finally, we compared the [prevalence of deleterious hitchhiking/accumulation of 
 We found that adaptively plastic populations evolve more slowly than non-plastic populations. 
 The non-plastic populations underwent more frequent selective sweeps and accumulated many more genetic changes over time, as non-plastic populations relied on genetic variation from \textit{de novo} mutations to continuously re-adapt to environmental changes. 
 % TODO - add something here about landscape data? architecture data?
-Indeed, we observed that the evolutionary dynamics of adaptively plastic populations more closely resemble the dynamics of non-plastic populations evolving in static environmental conditions than non-plastic populations evolving in fluctuating environments.
+% Indeed, we observed that the evolutionary dynamics of adaptively plastic populations more closely resemble the dynamics of non-plastic populations evolving in static environmental conditions than non-plastic populations evolving in fluctuating environments.
 We found that the evolution of adaptive phenotypic plasticity buffers populations against environmental fluctuations, whereas repeated selective sweeps in non-plastic populations drive the accumulation of deleterious genes and the loss of secondary beneficial traits via deleterious hitchhiking.
 As such, adaptively plastic populations were better able to retain novel traits than their non-plastic counterparts.
-[A sentence about how we hope this work inspires more use of digital evolution as an experimental tool/expand experimental repertoire of evolutionary biologists studying phenotypic plasticity?].
+% [A sentence about how we hope this work inspires more use of digital evolution as an experimental tool/expand experimental repertoire of evolutionary biologists studying phenotypic plasticity?].
 
 % Our results suggest that adaptive phenotypic plasticity can improve the potential for populations exploit novel resources in cyclically changing environments.
